[package]
name = "airdrop_turbin3_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.15.2"
solana-sdk = "1.15.2"
solana-program = "1.15.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10.3"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }